[package]
name = "virtio-drivers"
version = "0.1.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
num_enum = { version = "0.5.7", default-features = false }
volatile-register = "0.2.1"
